--- a/meetups/templates/meetups/meetup_list_private.html
+++ b/meetups/templates/meetups/meetup_list_private.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto min-w-3/4 max-w-10/12 p-6 shadow-md">
+<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-[75vw] p-6 shadow-md">
     <h1 class="text-3xl font-bold mb-6 text-center text-white">Treffen verwalten</h1>
     <div class="flex justify-end mb-6">
         <a href="{% url 'meetup_create' %}" class="btn btn-primary bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
