--- a/photo_challenge/templates/photo_challenge/photo_challenge_create.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_create.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="mt-12 mb-8 rounded-lg min-w-1/2 mx-auto py-6 sm:px-6 lg:px-8">
+<div class="mt-12 mb-8 rounded-lg w-[75vw] mx-auto py-6 sm:px-6 lg:px-8">
     <div class="overflow-hidden shadow-sm sm:rounded-lg">
         <div class="bg-fgreen-800 rounded-lg p-4">
             <h1 class="text-3xl font-bold mb-4 text-white">Neue Foto Challenge erstellen</h1>
