--- a/editing_challenge/templates/editing_challenge/editing_challenge_detail.html
+++ b/editing_challenge/templates/editing_challenge/editing_challenge_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 min-w-7/8 rounded-lg mt-12 mb-8 mx-auto">
+<div class="bg-fgreen-800 w-[75vw] rounded-lg mt-12 mb-8 mx-auto">
     <div class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
         {% for message in messages %}           
         <div id="alertBox" class="bg-forange-300 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
@@ -16,7 +16,10 @@
         {% endfor %}
         <h1 class="text-3xl font-bold mb-8 text-center">{{ object.name }}</h1>
         
-        <div class="flex flex-col items-center justify-center">
+        <p class="text-center">Start: {{ object.start_date }}</p>
+        <p class="text-center">Ende: {{ object.end_date }}</p>
+
+        <div class="flex flex-col items-center justify-center mt-8">
             <div class="flex justify-center items-center mb-4">
                 <img src="{{ object.raw_preview.url }}" alt="RAW Preview" class="w-96 h-auto object-cover rounded-md">
             </div>
@@ -40,20 +43,24 @@
                                 <p class="text-xs text-gray-500">{{ submission_data.submission.submitted_at }}</p>
                             </div>
                         </div>
-                        <img src="{{ submission_data.submission.edited_image.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-96 h-auto object-cover rounded-md mb-2">
+                        <a href="{{ submission_data.submission.edited_image.url }}" data-lightbox="roadtrip">
+                            <img src="{{ submission_data.submission.edited_image.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-96 h-auto object-cover rounded-md mb-2">
+                        </a>
                         <div class="relative flex items-center">
 
-                            <form method="post" action="{% url 'editing_challenge:editing_vote_submission' submission_data.submission.id %}" class="flex items-center">
-                                {% csrf_token %}
-                                <button type="submit" class="font-bold flex items-center" {% if not user.is_authenticated or not can_vote %}disabled{% endif %}>
-                                    {% if submission_data.has_voted %}
-                                        <i class="fa-solid fa-heart text-red-500 mr-1"></i>
-                                    {% else %}
-                                        <i class="fa-regular fa-heart mr-1"></i>
-                                    {% endif %}
-                                    {{ submission_data.submission.votes.count }}
-                                </button>
-                            </form>
+                            {% if can_vote %}
+                                <form method="post" action="{% url 'editing_challenge:editing_vote_submission' submission_data.submission.id %}" class="flex items-center">
+                                    {% csrf_token %}
+                                    <button type="submit" class="font-bold flex items-center" {% if not user.is_authenticated or not can_vote %}disabled{% endif %}>
+                                        {% if submission_data.has_voted %}
+                                            <i class="fa-solid fa-heart text-red-500 mr-1"></i>
+                                        {% else %}
+                                            <i class="fa-regular fa-heart mr-1"></i>
+                                        {% endif %}
+                                        {{ submission_data.submission.votes.count }}
+                                    </button>
+                                </form>
+                            {% endif %}
                             
                             <button class="ml-4 flex items-center text-blue-400 toggle-comments-button">
                                 <i class="fas fa-comments mr-1"></i>
@@ -77,7 +84,7 @@
                 <div class="bg-gray-700 p-4 -mt-8 rounded-lg comments-container hidden">
                     <div class="comments-list">
                         {% for comment in submission_data.comments %}
-                        <div class="mb-4 {% if comment.user == user %}text-right{% endif %}">
+                        <div class="mb-4 {% if comment.user == user %}text-left{% endif %}">
                             <div class="inline-block bg-gray-600 rounded-lg p-2 max-w-3/4">
                                 <p class="text-white">{{ comment.text }}</p>
                                 <p class="text-xs text-gray-400">{{ comment.user.username }} - {{ comment.created_at }}</p>
