--- a/meetups/templates/meetups/meetup_detail.html
+++ b/meetups/templates/meetups/meetup_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto max-w-3/4">
+<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-[75vw]">
     <div class="bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <h1 class="text-3xl font-bold mb-4 text-center">{{ meetup.title }}</h1>
         
@@ -18,7 +18,9 @@
             <div class="columns-1 gap-5 sm:columns-2 sm:gap-8 md:columns-3 lg:columns-4 [&>img:not(:first-child)]:mt-8">
             {% for image in meetup.images.all %}
                 <div class="first:mt-0 relative mt-4">
-                    <img src="{{ image.image.url }}" alt="Image for {{ meetup.title }}" class="w-full h-auto object-cover rounded-md">
+                    <a href="{{ image.image.url }}" data-lightbox="roadtrip">
+                        <img src="{{ image.image.url }}" alt="Image for {{ meetup.title }}" class="w-full h-auto object-cover rounded-md">
+                    </a>
                     {% if user.is_authenticated and image.user == user %}
                         <form method="post" action="{% url 'meetup_image_delete' meetup.id image.id %}">
                             {% csrf_token %}
