--- a/members/templates/members/member_list.html
+++ b/members/templates/members/member_list.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="mt-12 mb-8 mx-auto w-full max-w-4xl">
+<div class="mt-12 mb-8 mx-auto w-[75vw] max-w-4xl">
     <div class="rounded px-8 pt-6 pb-8 mb-4">
         <h1 class="text-3xl font-normal mb-4 text-center">Unsere Mitglieder</h1>
         
