--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="mt-12 mb-8 rounded-lg max-w-4xl mx-auto py-6 sm:px-6 lg:px-8">
+<div class="mt-12 mb-8 rounded-lg w-[75vw] mx-auto py-6">
     <div class="overflow-hidden shadow-sm sm:rounded-lg">
         
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
