--- a/members/templates/members/member_list.html
+++ b/members/templates/members/member_list.html
@@ -8,8 +8,8 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-4">
             {% for profile in profiles %}
             <div class="bg-gray-800 p-4 flex flex-col items-center">
-                <img src="{{ profile.picture.url }}" alt="{{ profile.full_name }}" class="w-48 h-48 object-fit rounded-lg">
-                <h2 class="text-white text-lg font-bold mt-2">{{ profile.full_name }}</h2>
+                <img src="{{ profile.picture.url }}" alt="{{ profile.username }}" class="w-48 h-48 object-fit rounded-lg">
+                <h2 class="text-white text-lg font-bold mt-2">{{ profile.username }}</h2>
                 
                 <!-- Add a link to view member details -->
                 <a href="{% url 'members:member_detail' profile.username %}" class="py-1 px-2 bg-forange-300 rounded-lg mt-2 text-blue-500 hover:text-blue-700">Profil ansehen</a>
