--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -23,6 +23,16 @@
                         <input type="text" name="full_name" id="id_full_name" value="{{ user.full_name }}" class="text-fgray-900 mt-1 block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md hidden">
                     </div>
                     <div class="mb-4">
+                        <label for="id_username" class="block text-lg font-medium text-fgray-50">Benutzername</label>
+                        <div class="flex items-center">
+                            <div class="flex-grow">
+                                <p class="text-fgray-50">{{ user.username }}</p>
+                            </div>
+                            <a href="#" class="ml-2 text-fgray-50 hover:text-fgray-50 edit-icon"><i class="fas fa-edit"></i></a>
+                        </div>
+                        <input type="text" name="username" id="id_username" value="{{ user.username }}" class="text-fgray-900 mt-1 block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md hidden">
+                    </div>
+                    <div class="mb-4">
                         <label for="id_email" class="block text-lg font-medium text-fgray-50">E-Mail Adresse</label>
                         <div class="flex items-center">
                             <div class="flex-grow">
@@ -62,7 +72,7 @@
                 </form>
                 
                 <!-- Equipment section -->
-                <div class="mb-4">
+                <div class="mb-8 mt-8">
                     <h2 class="text-lg font-bold mb-2 text-fgray-50">Ausrüstung</h2>
                     <form id="add-equipment-form" method="post" action="{% url 'members:add_equipment' %}">
                         {% csrf_token %}
@@ -80,10 +90,10 @@
                                 {% endif %}
                                 <li class="flex justify-between items-center mb-1" id="equipment-{{ equipment.id }}">
                                     <span class="text-fgray-50">
-                                        <span class="bg-forange-300 px-2 py-1 rounded-md">{{ equipment.name }}</span>
+                                        <span class="rounded-md">{{ equipment.name }}</span>
                                     </span>
-                                    <button class="delete-equipment text-fgray-50 bg-forange-300 px-2 py-1 rounded-md" data-id="{{ equipment.id }}">
-                                        <i class="fas fa-times"></i>
+                                    <button class="delete-equipment text-fgray-50 rounded-md" data-id="{{ equipment.id }}">
+                                        Löschen
                                     </button>
                                 </li>
                                 {% if forloop.last %}</div>{% endif %}
@@ -94,7 +104,7 @@
                 </div>
 
                 <!-- Interests section -->
-                <div class="mb-4">
+                <div class="mb-8">
                     <h2 class="text-lg font-bold mb-2 text-fgray-50">Interessen</h2>
                     <form id="add-interest-form" method="post" action="{% url 'members:add_interest' %}">
                         {% csrf_token %}
@@ -112,7 +122,7 @@
                 </div>
 
                 <!-- Photo Genres section -->
-                <div class="mb-4">
+                <div class="mb-8">
                     <h2 class="text-lg font-bold mb-2 text-fgray-50">Fotografie-Genres</h2>
                     <form id="add-photo-genre-form" method="post" action="{% url 'members:add_photo_genre' %}">
                         {% csrf_token %}
@@ -129,7 +139,7 @@
                     </ul>
                 </div>
 
-                <!-- Steckbrief section -->
+                <!-- Steckbrief section 
                 <div class="mb-4">
                     <h2 class="text-lg font-bold mb-2 text-fgray-50">Steckbrief</h2>
                     <form id="manage-steckbrief-form" method="post" action="{% url 'members:manage_steckbrief' %}">
@@ -137,7 +147,7 @@
                         {{ steckbrief_form.as_p }}
                         <button type="submit" class="bg-forange-300 text-fgray-50 px-2 py-1 rounded-md">Speichern</button>
                     </form>
-                </div>
+                </div> -->
                 
             </div>
             
