--- a/meetups/templates/meetups/meetup_detail.html
+++ b/meetups/templates/meetups/meetup_detail.html
@@ -45,6 +45,35 @@
             {% endfor %}
             </div>
         </div>
+
+        <div class="mt-8">
+            <div class="inline-block">
+                <h2 class="text-xl font-bold text-white">
+                    <i class="fa-solid fa-user"></i> Teilnehmer {{ meetup.attendees.count }}:
+                </h2>
+            </div>
+            <div class="inline-block ml-4">
+                {% if user.is_authenticated %}
+                    {% if user in meetup.attendees.all %}
+                        <form method="post" action="{% url 'leave_meetup' meetup.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="bg-forange-300 py-1 px-2 rounded-lg text-white">Dejoin Meetup</button>
+                        </form>
+                    {% else %}
+                        <form method="post" action="{% url 'join_meetup' meetup.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="bg-forange-300 py-1 px-2 rounded-lg text-white">Join Meetup</button>
+                        </form>
+                    {% endif %}
+                {% endif %}
+            </div>
+
+            <div class="text-white ml-4">
+                {% for attendee in meetup.attendees.all %}
+                    <span class="ml-2">{{ attendee.username }}</span>{% if not forloop.last %},{% endif %}
+                {% endfor %}
+            </div>
+        </div>        
         
         <div class="flex justify-end items-center mt-4">
             <a href="{% url 'meetup_list' %}" class="py-1 px-2 bg-forange-300 rounded-lg">Zurück zur Übersicht</a>
