--- a/static/css/output.css
+++ b/static/css/output.css
@@ -612,8 +612,16 @@ video {
   bottom: 0px;
 }
 
+.bottom-12 {
+  bottom: 3rem;
+}
+
 .left-1\/2 {
   left: 50%;
+}
+
+.left-2 {
+  left: 0.5rem;
 }
 
 .right-0 {
@@ -624,48 +632,16 @@ video {
   right: 0.5rem;
 }
 
+.right-28 {
+  right: 7rem;
+}
+
 .top-0 {
   top: 0px;
 }
 
 .top-2 {
   top: 0.5rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.bottom-8 {
-  bottom: 2rem;
-}
-
-.right-8 {
-  right: 2rem;
-}
-
-.bottom-12 {
-  bottom: 3rem;
-}
-
-.right-20 {
-  right: 5rem;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.right-28 {
-  right: 7rem;
 }
 
 .z-10 {
@@ -734,6 +710,10 @@ video {
   margin-left: 1rem;
 }
 
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -776,6 +756,10 @@ video {
 
 .mt-\[10px\] {
   margin-top: 10px;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
 .block {
@@ -1056,10 +1040,6 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-b-lg {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1084,6 +1064,11 @@ video {
   background-color: rgb(32 40 61 / var(--tw-bg-opacity));
 }
 
+.bg-fgray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 240 240 / var(--tw-bg-opacity));
+}
+
 .bg-fgreen-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(78 126 107 / var(--tw-bg-opacity));
@@ -1104,38 +1089,8 @@ video {
   background-color: rgb(229 176 131 / var(--tw-bg-opacity));
 }
 
-.bg-fgray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 157 156 / var(--tw-bg-opacity));
-}
-
-.bg-fgray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 240 240 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-
 .bg-opacity-70 {
   --tw-bg-opacity: 0.7;
-}
-
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-fblue-700 {
-  --tw-gradient-from: #4767ae var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(71 103 174 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-fgray-400 {
-  --tw-gradient-from: #939d9c var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(147 157 156 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .object-cover {
@@ -1174,6 +1129,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1202,16 +1162,6 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .pb-12 {
@@ -1418,10 +1368,6 @@ video {
   color: rgb(245 246 246 / var(--tw-text-opacity));
 }
 
-.hover\:underline:hover {
-  text-decoration-line: underline;
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1544,10 +1490,6 @@ video {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:px-8 {
