--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -105,7 +105,7 @@
                     <div class="text-center flex flex-wrap">
                         <a href="{% url 'members:member_detail' user.username %}">
                             {% if user.picture %}
-                            <img src="{{ user.picture.url }}" alt="{{ user.full_name }}" class="w-24 h-24 rounded-full mx-auto" />
+                            <img src="{{ user.picture.url }}" alt="{{ user.username }}" class="w-24 h-24 rounded-full mx-auto" />
                             {% else %}
                             <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto" />
                             {% endif %}
