--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -109,13 +109,11 @@
         <div class="container mx-auto p-4 flex justify-center items-center space-x-36">
             <div>
                 <ul class="space-x-2 flex flex-wrap justify-center items-center">
-                    <li><a href="#" class="hover:text-white">Impressum</a></li>
+                    <li><a href="{% url 'impressum' %}" class="hover:text-white">Impressum</a></li>
                     <li><span class="text-fgray-950">|</span></li>
-                    <li><a href="#" class="hover:text-white">Kontakt</a></li>
+                    <li><a href="{% url 'kontakt' %}" class="hover:text-white">Kontakt</a></li>
                     <li><span class="text-fgray-950">|</span></li>
-                    <li><a href="#" class="hover:text-white">Cookie Einstellungen</a></li>
-                    <li><span class="text-fgray-950">|</span></li>
-                    <li><a href="#" class="hover:text-white">Datenschutzerklärung</a></li>
+                    <li><a href="{% url 'datenschutzerklaerung' %}" class="hover:text-white">Datenschutzerklärung</a></li>
                     <li><span class="text-fgray-950">|</span></li>
                     <li><a href="https://www.instagram.com/fototreff_dresden/" class="hover:text-white text-3xl">
                             <i class="fab fa-instagram"></i>
