fix width picture

--- a/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
@@ -39,7 +39,7 @@
                                             </div>
                                             
                                             <a href="{{ image.url }}" data-lightbox="roadtrip">
-                                                <img src="{{ image.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-[500px] h-auto object-cover rounded-md mb-2">
+                                                <img src="{{ image.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-96 h-auto object-cover rounded-md mb-2">
                                             </a>
                                             
                                             <div class="flex mt-1">
