--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -111,7 +111,7 @@
                             {% else %}
                             <img src="static/images/default_profile.png" alt="Default Profile Picture" class="w-24 h-24 rounded-full mx-auto" />
                             {% endif %}
-                            <p class="text-white mt-2">{{ user.full_name }}</p>
+                            <p class="text-white mt-2">{{ user.username }}</p>
                         </a>
                     </div>
                     {% endfor %}
