--- a/main/templates/main/impressum.html
+++ b/main/templates/main/impressum.html
@@ -7,6 +7,7 @@
     <h2 id="m46" class="text-2xl font-semibold mt-6 mb-2">Diensteanbieter</h2>
     <p class="mb-2">Marvin Menzel</p>
     <p class="mb-2">Grazer Straße 1A</p>
+    <p class="mb-2">01279 Dresden</p>
     <p class="mb-6">Deutschland</p>
 
     <h2 id="m56" class="text-2xl font-semibold mt-6 mb-2">Kontaktmöglichkeiten</h2>
