--- a/members/templates/members/profile_edit.html
+++ b/members/templates/members/profile_edit.html
@@ -9,6 +9,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
             <div class="bg-fgreen-800 rounded-lg p-4">
                 <h1 class="text-3xl font-bold mb-4 text-fgray-50">Profil bearbeiten</h1>
+
                 <form method="post" enctype="multipart/form-data" action="{% url 'members:profile_edit' %}">
                     {% csrf_token %}
                     {{ form.non_field_errors }}
@@ -70,6 +71,24 @@
                         <button type="submit" class="bg-forange-300 text-fgray-50 px-4 py-2 rounded-md hover:bg-gray-700">Speichern</button>
                     </div>
                 </form>
+
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+
+                <div class="mb-8">
+                    <h2 class="text-lg font-bold mb-2 text-fgray-50">Change Password</h2>
+                    <form method="post" action="{% url 'members:profile_edit' %}">
+                        {% csrf_token %}
+                        {{ password_form.as_p }}
+                        <input type="hidden" name="change_password" value="1">
+                        <button type="submit" class="bg-forange-300 text-fgray-50 px-4 py-2 rounded-md hover:bg-gray-700">Change Password</button>
+                    </form>
+                </div>
                 
                 <!-- Equipment section -->
                 <div class="mb-8 mt-8">
