--- a/editing_challenge/templates/editing_challenge/editing_challenge_detail.html
+++ b/editing_challenge/templates/editing_challenge/editing_challenge_detail.html
@@ -52,7 +52,7 @@
                                     {% csrf_token %}
                                     <button type="submit" class="font-bold flex items-center" {% if not user.is_authenticated or not can_vote %}disabled{% endif %}>
                                         {% if submission_data.has_voted %}
-                                            <i class="fa-solid fa-heart text-red-500 mr-1"></i>
+                                            <i class="fa-solid fa-heart text-forange-600 mr-1"></i>
                                         {% else %}
                                             <i class="fa-regular fa-heart mr-1"></i>
                                         {% endif %}
